Fixed home-button being too close to the page header

--- a/src/pages/DetailedQuestions.css
+++ b/src/pages/DetailedQuestions.css
@@ -59,6 +59,14 @@ body {
     transform: translateY(-2px); 
 }
 
+.home-button {
+    padding-bottom: 1%;
+}
+
+.detailed-header {
+    margin-top: 1%;
+}
+
 .IMG {
     width: 80%; 
     height: 80%; 
